# saint-venant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arz_solver/: README.md  __init__.py  config.py  initial_conditions.py  plotting.py  solver.py
arz_solver/examples/: train_wave_head.ipynb
godunov_solver/: __init__.py  boundary_cond.py  flux.py  grid.py  grid_generator.py  initial_cond.py  main.py  plotter.py  solve_class.py  solver.py  testing.ipynb
learner/: data_pipeline.py  main.py  model.py  test_pipeline.py
notebooks/: arz.ipynb  godunov.ipynb  laxhopf.ipynb
numerical_methods/: __init__.py  grid.py  grid_generator.py  plotter.py
numerical_methods/boundary_cond/: __init__.py  boundary_cond.py  constant.py  ghost_cell.py
numerical_methods/flux/: __init__.py  flux.py  greenshields.py  triangular.py
numerical_methods/initial_cond/: __init__.py  constant.py  initial_cond.py  piecewise.py  riemann.py
numerical_methods/solvers/: __init__.py  godunov.py  solver.py
numerical_solver/: animate_solution.py  main.py  plot_spacetime.py
numerical_solver/parameters/: PARAMETERS.md  parameters.json  parameters_dambreak_dry.json  parameters_dambreak_wet.json  parameters_hll_rk2.json  parameters_thacker.json
numerical_solver/solver/: data_file.py  finite_volume.py  mesh.py  numba_kernels.py  physics.py  time_scheme.py
numerical_solvers/: structure.md
numerical_solvers/arz/: README.md  __init__.py  flux.py  initial_conditions.py  physics.py  timestepper.py  weno.py
numerical_solvers/euler/: __init__.py  initial_conditions.py  physics.py  test_api_euler.ipynb  timestepper.py
numerical_solvers/lwr/: __init__.py  initial_conditions.py  test_api_lwr.ipynb
numerical_solvers/lwr2d/: boundary.py  flux.py  physics.py  structure.md  test_api_lwr2d.ipynb
numerical_solvers/notebooks/: test_api_burgers.ipynb  test_api_euler.ipynb  test_api_euler2d.ipynb  test_api_lwr.ipynb  test_api_lwr2d.ipynb
numerical_solvers/test/: conftest.py
operator_learning/: fno_test.ipynb  hf_grids.py  modal_train.py  model.py  operator_data_pipeline.py  operator_one_shot.ipynb  operator_test.ipynb  plot_data.py  test.py  test_super_resolution.ipynb  tmp_grids.npz  train.py  train_job.slurm  upload_grid.py  visualize_fno_spectral.py  wave_front_test.ipynb  wave_test.ipynb
operator_learning/loss/: lwr_loss.py  pde_loss.py
operator_learning/models/: axial_decoder.py  cross_decoder.py  deeponet.py  encoder.py  encoder_decoder.py  fno_cnn.py  fno_denoiser.py  fno_wrapper.py  gnn_attention.py  lno.py  moe_fno.py  wave_front_pred.py  wave_front_router.py  wno.py
wavefront_learning/: ARCHITECTURE.md  CHARNO_DESIGN.md  CLAUDE.md  Structure.md  TASK.md  data.py  data_loading.py  data_processing.py  eval-lwr.sh  eval-modules-arz.sh  eval-modules.sh  eval.sh  eval_arz.sh  logger.py  loss.py  metrics.py  model.py  plotter.py  results.tsv  savio-burgers.sh  test.py  test_wavefront_model.ipynb  train.py  training_loop.py  validate_solvers.py
wavefront_learning/configs/: __init__.py  cli.py  loader.py  presets.py  presets.yaml  training.yaml  training_defaults.py
wavefront_learning/data/: __init__.py  ar_transforms.py  data_loading.py  data_processing.py  transforms.py
wavefront_learning/docs/: ARCHITECTURE.md  FNO_RESOLUTION_ANALYSIS.md  Structure.md  WaveNO.md  WaveNOAblationFiLM.md  analysis_pde_shocks.md  program.md  waveno_changes.md
wavefront_learning/losses/: __init__.py  acceleration.py  base.py  boundary.py  cell_avg_mse.py  flux.py  (+24 more)
(+193 files in other folders)
