[project]
name = "saint-venant"
version = "1.0.0"
description = "1D Saint-Venant (shallow water) equations solver using finite volume methods"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.20.0",
    "numba>=0.57.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "ipykernel>=6.29.5",
    "torch>=2.5.1",
    "joblib>=1.4.2",
]

[project.scripts]
saint-venant = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "data_file", "mesh", "physics", "finite_volume", "time_scheme"]

[tool.uv]
dev-dependencies = []
