[project]
name = "saint-venant"
version = "1.0.0"
description = "1D Saint-Venant (shallow water) equations solver using finite volume methods"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.20.0",
    "numba>=0.57.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "ipykernel>=6.29.5",
    "torch>=2.5.1",
    "joblib>=1.4.2",
    "neuraloperator>=0.3.0",
    "comet-ml>=3.54.1",
    "deepxde>=1.10.1",
    "modal>=0.65.66",
    "torchinfo>=1.8.0",
    "nfv",
    "pytorch-wavelets",
    "ptwt>=0.1.9",
]

[project.scripts]
saint-venant = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["numerical_methods", "learner", "operator_learning"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
nfv = { git = "https://github.com/mchami02/nfv.git" }
pytorch-wavelets = { git = "https://github.com/fbcotter/pytorch_wavelets.git" }
