[project]
name = "saint-venant"
version = "1.0.0"
description = "1D Saint-Venant (shallow water) equations solver using finite volume methods"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch-geometric>=2.7.0",
    "matplotlib>=3.7.5",
    "numpy>=1.20.0",
    "numba>=0.57.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "neuraloperator>=0.3.0",
    "comet-ml>=3.54.1",
    "deepxde>=1.10.1",
    "modal>=0.65.66",
    "torchinfo>=1.8.0",
    "nfv",
    "pytorch-wavelets",
    "ptwt>=0.1.9",
    "einops>=0.8.1",
    "huggingface-hub>=1.1.7",
    "dotenv>=0.9.9",
    "datasets>=4.4.1",
    "ruff>=0.14.14",
]

[dependency-groups]
def = ["torch>=2.5.1"]
gnn = [
    "torch==2.2.1",
    "torchdata==0.7.1",
    "dgl==2.1.0",
    "numpy<2"
]
dev = []

[tool.uv]
conflicts = [
    [
      { group = "gnn" },
      { group = "def" },
    ],
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["venv", ".venv", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"


[project.scripts]
saint-venant = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["numerical_methods", "learner", "operator_learning", "numerical_solvers", "numerical_solvers.arz"]

[tool.uv.sources]
nfv = { git = "https://github.com/mchami02/nfv.git" }
pytorch-wavelets = { git = "https://github.com/fbcotter/pytorch_wavelets.git" }
